--- a/demo5.html
+++ b/demo5.html
@@ -6,23 +6,53 @@
     <meta name="description" content="description"/>
     <meta name="author" content="author" />
     <meta name="keywords" content="keywords" />
+    <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+
+    <meta name="apple-mobile-web-app-capable" content="yes">
+    <meta name="apple-mobile-web-app-status-bar-style" content="black">
+    <meta name="apple-mobile-web-app-title" content="ς T Ξ P H Ξ N">
+    <link rel="apple-touch-icon" href="/icon.png"> 
+    <link rel="manifest" href="/manifest.json">
+
+
     <link rel="stylesheet" href="./stylesheet.css" type="text/css" />
     <style type="text/css">
-        html, body { margin: 0; padding: 0; }
+        html, body { margin: 0; padding: 0; touch-action: none }
+        #container { position: relative; background: pink; width: 100vw; height: 100vh;}
         .button { height: 400px; width: 400px; background-size: 100% 100%; }
     
+        .element-fullscreen {
+            position: fixed; /* Fixed position */
+            top: 0;
+            right: 0;
+            bottom: 0;
+            left: 0;
+            z-index: 9999; /* Make sure it's on top */
+            overflow: hidden; /* Prevent scrollbars */
+        }
+
+        img.nav {
+            position: absolute;
+        }
+
     </style>
   </head>
   <body>
-    <img src="button1.png" height="200" style="position: absolute">
-    <img src="button2.png" height="50" style="position: absolute; left: 50px">
-    <img src="button3.png" height="50" style="position: absolute; left: 200px">
-    <img src="button4.png" height="80" style="position: absolute; left: 350px;">
-    <img src="button5.png" height="100" style="position: absolute; left: 370px; top: 100px">
 
-    <!-- <a href="" class="button" id="button1" style="background-image: url('button1.png');">X</a> -->
+    <div id="container">
+        <img class="nav" src="button1-rot.png" style="width: 100vw">
+        <img class="nav" src="button2-rot.png" style="width: 25vw; right: 0; top: 15vh">
+        <img class="nav" src="button3-rot.png" style="width: 25vw; right: 0; top: 45vh">
+        <img class="nav" src="button4-rot.png" style="width: 50vw; bottom: 0; right: 0 ">
+        <img class="nav" src="button5-rot.png" style="width: 50vw; bottom: 0">
+    </div>
+
 
   </body>
+
+  <script>
+
+  </script>
 
   <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </html>
