--- a/index.html
+++ b/index.html
@@ -4,13 +4,23 @@
   <meta charset="UTF-8">
   <meta name="viewport" content="width=device-width, initial-scale=1.0">
   <title>Multi-Touch Area</title>
+
+  <meta name="viewport" content="minimal-ui, width=device-width, initial-scale=1, maximum-scale=1, user-scalable=no">
+  <meta name="apple-mobile-web-app-capable" content="yes">
+  <meta name="apple-mobile-web-app-status-bar-style" content="black">
+  <meta name="apple-mobile-web-app-title" content="ς T Ξ P H Ξ N">
+  <link rel="apple-touch-icon" href="/icon.png"> 
+  <link rel="manifest" href="/manifest.json">
+
   <style>
 
+html, body { margin: 0; padding: 0; }
+
 #touch-area {
-  width: 300px;
-  height: 300px;
+  width: 100vw;
+  height: 100vh;
   background-color: #f0f0f0;
-  border: 4px solid #ccc;
+  /* border: 4px solid #ccc; */
 }
 .circle {
   width: 20px;
