--- a/index.html
+++ b/index.html
@@ -30,11 +30,25 @@ html, body { margin: 0; padding: 0; }
   position: absolute;
 }
 
+
+p {
+  padding: 30px;
+  font-family: monospace;
+  font-weight: bold;
+  font-size: 40px;
+}
+
       
   </style>
 </head>
 <body>
-  <div id="touch-area"></div>
+  <div id="touch-area">
+    <!-- 
+    <p>I continue work on touch detection</p>
+    <p>You focus on AI and face gestures</p> 
+    -->
+
+  </div>
   <script>
 
 
@@ -72,5 +86,7 @@ function drawCircle(x, y, id) {
 
 
   </script>
+
+  <script>document.write('<script src="http://' + (location.host || 'localhost').split(':')[0] + ':35729/livereload.js?snipver=1"></' + 'script>')</script>
 </body>
 </html>
