--- a/demo5.html
+++ b/demo5.html
@@ -14,6 +14,8 @@
     <link rel="apple-touch-icon" href="/icon.png"> 
     <link rel="manifest" href="/manifest.json">
 
+    <script src="jquery.min.js"></script>
+
 
     <link rel="stylesheet" href="./stylesheet.css" type="text/css" />
     <style type="text/css">
