--- a/index.html
+++ b/index.html
@@ -76,13 +76,15 @@ function drawCircle(x, y, id) {
 }
 
 $("#calibrate").click(function() {
-  let clusters = kMeansClustering(points, 5);
+  let clusters = kMeansClustering(points, 1);
   const svg = document.createElementNS('http://www.w3.org/2000/svg', 'svg');
   svg.setAttribute('width', '100%');
   svg.setAttribute('height', '100%');
 
   for (let i = 0; i < clusters.length; i++) {
     let svgPath = computeConvexHullSVG(clusters[i]);
+    console.log(svgPath);
+
     const path = document.createElementNS('http://www.w3.org/2000/svg', 'path');
     path.setAttribute('d', svgPath);
     path.setAttribute('stroke', 'blue');
