--- a/index.html
+++ b/index.html
@@ -116,6 +116,8 @@ $("#calibrate").click(function() {
     path.setAttribute('d', svgPath);
     path.setAttribute('stroke', 'blue');
     path.setAttribute('fill', 'blue');
+    path.setAttribute('stroke-width', 30);
+
 
     // Append the path to the SVG
     svg.appendChild(path);
