--- a/index.html
+++ b/index.html
@@ -97,14 +97,25 @@ function drawCircle(x, y, id) {
 }
 
 let clusters = []; // globally accessible
-
+let centroids = [];
+let longestPaths = [];
 
 $("#calibrate").click(function() {
   clusters = kMeansClustering(points, 5);
   calibrate();
 });
 
+$("#skip").click(function() {
+  clusters = kMeansClustering(pointsBackup, 5);
+  calibrate();
+});
+
 function calibrate() {
+  // Assining center of gravity for ease of calculation later on
+  for (let i = 0; i < clusters.length; i++) {
+    centroids[i] = _calculateCenterOfGravity(clusters[i]);
+  }
+
   // Clear existing content in 'paths' element
   const pathsElement = document.getElementById('paths');
   pathsElement.innerHTML = '';
@@ -129,7 +140,8 @@ function calibrate() {
     svg.appendChild(path);
 
 
-    LPIC2 = _calculateLongestPath(clusters[i]); // LPIC = Longest Path In Cluster
+    longestPaths[i] = _calculateLongestPath(clusters[i]); // LPIC = Longest Path In Cluster
+    const LPIC2 = longestPaths[i]; // handy shortcut to keep lines within manageable size
     const pathData = `M ${LPIC2[0].x},${LPIC2[0].y} L ${LPIC2[1].x},${LPIC2[1].y}`;
 
     const path2 = document.createElementNS('http://www.w3.org/2000/svg', 'path');
@@ -146,12 +158,6 @@ function calibrate() {
 
   setTimeout(cleanupCalibration, 2000);
 }
-
-
-$("#skip").click(function() {
-  clusters = kMeansClustering(pointsBackup, 5);
-  calibrate();
-});
 
 function cleanupCalibration() {
   touchArea.removeEventListener('touchstart', handleTouch);
@@ -173,8 +179,28 @@ function handleTouchOperations(event) {
 
   for (let i = 0; i < touches.length; i++) {
     const touch = touches[i];
+    let minDistance = Infinity;
+    let closestCentroid = null;
+    let closestCentroidIndex = null
 
-  }
+    // Iterate through centroids to find the closest one to the current touch point
+    for (let j = 0; j < centroids.length; j++) {
+        const centroid = centroids[j];
+        const distance = Math.sqrt((touch.pageX - centroid.x) ** 2 + (touch.pageY - centroid.y) ** 2);
+        if (distance < minDistance) {
+            minDistance = distance;
+            closestCentroid = centroid;
+            closestCentroidIndex = j;
+        }
+    }
+
+    // 'closestCentroid' now contains the centroid closest to the current touch point
+    console.log("Closest centroid to touch point:", closestCentroid);
+
+    let result = calculatePerpendicularSection(longestPaths[closestCentroidIndex][0], longestPaths[closestCentroidIndex][1], {x: touch.pageX, y: touch.pageY} );
+    console.log("Perpendicular section:", result);
+}
+
 }
 
 
