--- a/index.html
+++ b/index.html
@@ -32,7 +32,8 @@
 
   </div>
   <button id="calibrate" style="position: absolute; bottom: 0; height: 40px;">Calibrate</button>
-  <button id="skip" style="position: absolute; bottom: 0; left: 100px; height: 40px;">Skip cali</button>
+  <button id="skip" style="position: absolute; bottom: 0; left: 60px; height: 40px;">Skip cali</button>
+  <!-- <button id="saveDefault" style="position: absolute; bottom: 0; left: 120px; height: 40px;">Save dafault path</button> -->
 
   <div id="paths" style="position: absolute; width: 100vw; height: 100vh; top: 0; z-index: -1; "></div>
   <div id="rectangles" style="position: absolute; width: 100vw; height: 100vh; top: 0; z-index: -1; "></div>
