Displaying current letter

--- a/index.html
+++ b/index.html
@@ -29,6 +29,7 @@
     -->
 
     <p id="infobox"></p>
+    <p id="current-letter"></p>
 
   </div>
   <button id="calibrate" style="position: absolute; bottom: 0; height: 40px;">Calibrate</button>
